--- a/src/app/pages/HomePage/Client/styles.scss
+++ b/src/app/pages/HomePage/Client/styles.scss
@@ -2,7 +2,7 @@
 
 .client-container{
     width: 100vw;
-    height: 80vh;
+    min-height: 80vh;
     text-align: center;
     display: flex;
     justify-content: space-between;
