--- a/src/app/pages/HomePage/Org/styles.scss
+++ b/src/app/pages/HomePage/Org/styles.scss
@@ -2,7 +2,7 @@
 
 .org-container{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     h2{
         margin-top: 50px;
