--- a/src/app/pages/HomePage/MDSpeaks/styles.scss
+++ b/src/app/pages/HomePage/MDSpeaks/styles.scss
@@ -2,7 +2,7 @@
 
 .md-speaks-container{
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     padding: 70px 50px;
     .img{
