--- a/src/app/pages/HomePage/Growth/styles.scss
+++ b/src/app/pages/HomePage/Growth/styles.scss
@@ -17,7 +17,7 @@
         margin-bottom: 70px;
     }
     p{
-        width: 70%;
+        // width: 70%;
         text-align: center;
         margin:auto;
         font-size: 20px;
