--- a/src/app/pages/HomePage/Org/styles.scss
+++ b/src/app/pages/HomePage/Org/styles.scss
@@ -3,7 +3,7 @@
 .org-container{
     width: 100vw;
     min-height: 100vh;
-    text-align: center;
+    text-align: center;margin-bottom: 86px;
     h2{
         margin-top: 50px;
         margin-bottom: 125px;
