--- a/src/app/pages/HomePage/styles.scss
+++ b/src/app/pages/HomePage/styles.scss
@@ -6,6 +6,10 @@
     }
     h2{
         color: #e72020;
-        margin-bottom: 86px;
+        margin: 86px 0px;
+    }
+    .max-width-container{
+        max-width: 1024px;
+        margin: 0px auto;
     }
 }  
