--- a/src/app/pages/HomePage/About/styles.scss
+++ b/src/app/pages/HomePage/About/styles.scss
@@ -2,6 +2,7 @@
 
 .about-container{
     width: 100vw;
+    max-height: 100vh;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -30,13 +31,22 @@
             color: #5d5d5d;
         }
     }
-    .right-section{
-        flex:1;
+    img{
+        flex: 1;
         padding-left: 100px;
         text-align: right;
-        // img{
-        //     width: 98%;
-        //     height: 100%;
-        // }
+        width: 50%;
+        height: 70%;
     }
+    // .right-section{
+    //     flex:1;
+    //     padding-left: 100px;
+    //     text-align: right;
+    //     img{flex: 1;
+    //         padding-left: 100px;
+    //         text-align: right;
+    //         width: 100%;
+    //         height: 70%;
+    //     }
+    // }
 }
