--- a/src/app/pages/HomePage/Products/styles.scss
+++ b/src/app/pages/HomePage/Products/styles.scss
@@ -7,7 +7,7 @@
     padding: 160px;
     .content{
         flex:2;
-        margin: 15% auto;
+        // margin: 15% auto;
         h2{
             text-transform: uppercase;
             margin-bottom: 50px;
