--- a/src/app/pages/HomePage/Growth/styles.scss
+++ b/src/app/pages/HomePage/Growth/styles.scss
@@ -11,7 +11,6 @@
     padding-bottom: 100px;;
     .banner{
         width:100%;
-        margin-bottom: 132px;;
     }
     h2{
         margin-bottom: 70px;
@@ -20,7 +19,6 @@
         // width: 70%;
         text-align: center;
         margin:auto;
-        font-size: 20px;
         font-weight: normal;
         font-stretch: normal;
         font-style: normal;
@@ -29,5 +27,8 @@
         text-align: center;
         color: #5d5d5d;
         margin-bottom: 50px;
+        @include tablet{
+            padding: 0px 20px;
+        }
     }
 }
