--- a/src/app/pages/HomePage/Products/styles.scss
+++ b/src/app/pages/HomePage/Products/styles.scss
@@ -5,6 +5,9 @@
     height: 100vh;
     display: flex;
     padding: 160px;
+    @include tablet{
+        padding: 100px 50px;
+    }
     .content{
         flex:2;
         // margin: 15% auto;
