--- a/src/app/pages/HomePage/styles.scss
+++ b/src/app/pages/HomePage/styles.scss
@@ -4,9 +4,24 @@
     p{
         font-size: 20px;
     }
+    h1{
+        font-size: 70px;
+        @include tablet{
+            font-size: 60px;
+        }
+    }
     h2{
         color: #e72020;
         margin: 86px 0px;
+        @include tablet{
+            font-size: 42px !important;
+        }
+    }
+    p{
+        font-size: 20px;
+        @include tablet{
+            font-size: 16px;
+        }
     }
     .max-width-container{
         max-width: 1024px;
