--- a/src/app/assets/scss/reset.scss
+++ b/src/app/assets/scss/reset.scss
@@ -867,8 +867,22 @@ p.accent {
 .left{
     text-align: left;
 }
-
+.max-width-container{
+    max-width: 1024px;
+    margin: 0px auto;
+}
+h1{
+    text-transform: uppercase;
+    font-size: 60px;
+    color: white;
+}
 h2{
     font-size: 60px;
     text-transform: uppercase;
+}
+
+h5{
+    font-size: 25px;
+    text-transform: uppercase;
+    color: red;
 }
