--- a/src/app/pages/Footer/styles.scss
+++ b/src/app/pages/Footer/styles.scss
@@ -5,32 +5,61 @@
     width: 100vw;
     padding: 10%;  
     background-color: black;
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
     position: relative;
     .inline{
         display: inline-block;
         vertical-align: top;
     }
     h2{
+        flex-grow: 1;
+        display: block;
         font-size: 30px;
         color: white;
         margin-bottom: 60px;
         margin-top: 20px;
+        width: 100%;
     }
     .left{
         // flex:1;
+        display: inline-block;
+        width: 80%;
+        
+        @include tablet{
+            width: 70%;
+            font-size: 18px;
+        }
         p{
             color:#959595;
             margin:10px 5px;
+            font-family: Lato;
+            font-size: 20px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.4;
+            letter-spacing: normal;
+            // text-align: left;
+            color: #959595;
+            @include tablet{
+                font-size: 18px;
+            }
         }
     }
     .right{
         // flex:1;
+        width: 20%;
+        vertical-align: top;
+        display: inline-block;
         text-transform: uppercase;
-        vertical-align: middle;
         text-align: left;
         color: white;
+        font-size: 20px;
+        @include tablet{
+            width: 30%;
+            font-size: 18px;
+        }
         .menu-left{
             display: inline-block;
             // width: 49%;
@@ -42,7 +71,6 @@
             display: inline-block;
             p{
                 color: #dfdfdf;
-                font-size: 15px;
                 margin: 10px;
             }
         }
