--- a/src/app/pages/Header/styles.scss
+++ b/src/app/pages/Header/styles.scss
@@ -6,4 +6,47 @@
     left: 0px;
     width: 100vw;
     height: 120px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #00000060;
+    z-index: 1;
+    .logo-section{
+        height: 100%;
+        .logo{
+            display: inline-block;
+            height: 70%;
+            margin: 10px 0px 0px 70px;
+            @include tablet{
+                margin: 20px 0px 0px 70px;
+                // height: 50%;
+            }
+        }
+        h5{
+            margin-top: 40px;
+            margin-left: 20px;
+            color: white;
+            display: inline-block;
+            vertical-align: top;
+            @include tablet{
+                margin-top: 45px;
+                font-size: 20px;
+            }
+        }
+    }
+    .navbar{
+        display: flex;
+        a {
+            padding: 50px 70px 30px;
+            text-transform: uppercase;
+            font-size: 20px;
+            color: white;
+            @include tablet{
+                padding: 50px 20px 30px;
+            }
+        }
+        .active{
+            border-bottom: 5px solid #e72020;
+            font-weight: bolder;
+        }
+    }
 }
