--- a/src/app/assets/scss/reset.scss
+++ b/src/app/assets/scss/reset.scss
@@ -886,3 +886,16 @@ h5{
     text-transform: uppercase;
     color: red;
 }
+
+
+.mobile{
+    display: none;
+    @include mobile{
+        display: unset;
+    }
+}
+.not-mobile{
+    @include mobile{
+        display: none;
+    }
+}
