--- a/src/app/pages/Inititative/Heading/styles.scss
+++ b/src/app/pages/Inititative/Heading/styles.scss
@@ -2,7 +2,7 @@
 
 .heading-container{
     width: 100vw;
-    height: 564px;
+    height: 100vh;
     position: relative;
     background-color: black;
     text-align: center;
