--- a/src/app/pages/HomePage/About/styles.scss
+++ b/src/app/pages/HomePage/About/styles.scss
@@ -8,6 +8,11 @@
     align-items: center;
     justify-content: center;
     overflow-x: hidden;
+    @include mobile{
+        display: block;
+        text-align: center;
+        margin-top: 200px;
+    }
     .left-section{
         flex:1;
         text-align: left;
@@ -27,9 +32,21 @@
             letter-spacing: normal;
             text-align: left;
             color: #5d5d5d;
+            @include mobile{
+                text-align: center;
+            }
+        }
+        @include mobile{
+            text-align: center;
         }
     }
-    img{
+    
+    .top{
+        text-align: center;
+        width: 70%;
+        margin: auto;
+    }
+    .right{
         flex: 1;
         padding-left: 100px;
         text-align: right;
@@ -39,15 +56,4 @@
             height: 50%;
         }
     }
-    // .right-section{
-    //     flex:1;
-    //     padding-left: 100px;
-    //     text-align: right;
-    //     img{flex: 1;
-    //         padding-left: 100px;
-    //         text-align: right;
-    //         width: 100%;
-    //         height: 70%;
-    //     }
-    // }
 }
