--- a/src/app/pages/HomePage/Growth/styles.scss
+++ b/src/app/pages/HomePage/Growth/styles.scss
@@ -11,6 +11,9 @@
     padding-bottom: 100px;;
     .banner{
         width:100%;
+        @include mobile{
+            height: 400px;
+        }
     }
     h2{
         margin-bottom: 70px;
@@ -29,6 +32,9 @@
         margin-bottom: 50px;
         @include tablet{
             padding: 0px 20px;
+        }
+        @include mobile{
+            padding: 100px 150px;
         }
     }
 }
