--- a/src/app/pages/HomePage/Org/styles.scss
+++ b/src/app/pages/HomePage/Org/styles.scss
@@ -4,9 +4,20 @@
     width: 100vw;
     min-height: 100vh;
     text-align: center;margin-bottom: 86px;
+    @include mobile{
+        
+        min-height: unset;
+        height: auto;
+    }
     img{
         @include tablet{
 
+            width: 90%;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        @include mobile{
             width: 90%;
             text-align: center;
             margin-left: auto;
