--- a/src/app/pages/Inititative/Content/styles.scss
+++ b/src/app/pages/Inititative/Content/styles.scss
@@ -6,8 +6,17 @@
     text-align: center;
     font-size: 20px;
     line-height: 30px;
+    @include mobile{
+        padding: 180px 60px;
+        font-size: 40px;
+        line-height: 1.5;
+    }
     h5{
         margin: 20px auto;
         line-height: 30px;
+        @include mobile{
+            font-size: 60px;
+            line-height: normal;
+        }
     }
 }
