--- a/src/app/pages/HomePage/MDSpeaks/styles.scss
+++ b/src/app/pages/HomePage/MDSpeaks/styles.scss
@@ -19,6 +19,10 @@
         @include mobile{
             text-align: center;
             width: 100%;
+            img{
+                width: 100%;
+            }
+
         }
     }
     .content{
