--- a/src/app/pages/HomePage/Products/styles.scss
+++ b/src/app/pages/HomePage/Products/styles.scss
@@ -12,6 +12,7 @@
         height: auto;
         display: block;
         text-align: center;
+        padding: 20px;
     }
     .content{
         flex:2;
