--- a/src/app/pages/Footer/styles.scss
+++ b/src/app/pages/Footer/styles.scss
@@ -11,7 +11,7 @@
     position: relative;
     @include mobile{
         padding: 20px;
-        height: 60vh;
+        height: 100vh;
     }
     .inline{
         display: inline-block;
@@ -26,7 +26,7 @@
         margin-top: 20px;
         width: 100%;
         @include mobile{
-            font-size: 50px;
+            font-size: 16px;
         }
     }
     .left{
@@ -37,7 +37,7 @@
         height: 100%;
         @include mobile{
             width: 65%;
-            height: 100%;
+            height: 84%;
         }
         @include tablet{
             width: 70%;
@@ -61,15 +61,23 @@
             }
             
             @include mobile{
-                font-size: 30px;
+                font-size: 13px;
             }
         }
         .company-detail{
             position: absolute;
             bottom: 0px;
+            img{
+                display: none;
+                @include mobile{
+                    display: block;
+                }
+            }
             @include mobile{
                 position: absolute;
-                bottom: 220px;
+                bottom: 10px;
+                width: 100%;
+                background-color: black;
             }
         }
     }
@@ -90,8 +98,9 @@
         }
         
         @include mobile{
+            display: none;
             width: 35%;
-            font-size: 30px;
+            font-size: 13px;
         }
         .menu-left{
             display: inline-block;
