--- a/src/app/pages/Header/styles.scss
+++ b/src/app/pages/Header/styles.scss
@@ -14,13 +14,17 @@
         width: 100px;
         height: 10px;
         border-radius: 2px;
-        background-color: white;
         margin-bottom: 15px;
+        background-color: white;
+        @include mobile{
+            width: 30px;
+            height: 4px;
+            margin-bottom: 3px;
+        }
     }
     @include mobile{
         position: absolute;
         background-color: #00000000;
-        // height: 120px;
     }
     .logo-section{
         height: 100%;
@@ -33,8 +37,9 @@
                 // height: 50%;
             }
             @include mobile{
-                margin: 40px 0px 0px 70px;
-                height: 200%;
+                margin: 20px 0px 0px 30px;
+                // height: 200%;
+                height: 50px;
             }
         }
         h5{
@@ -75,7 +80,7 @@
         display: none;
         @include mobile{
             display: unset;
-            margin: 90px 30px;
+            margin: 35px 20px;
         }
     }
     .menu{
@@ -91,25 +96,30 @@
         height: 100vh;
         right: 0px;
         top: 0px;
-        width: 50vw;
-        background-color: #212121;
-        padding: 80px 40px ;
+        width: 100vw;
+        background-color: white;
+        // padding: 80px 40px ;
+        text-align: center;
         .close{
+            margin-top: 50px;
             margin-left: 75% ;
             margin-bottom: 150px;
             .tile1{
                 transform: rotate(225deg);
+                background-color: #212121;
             }
             .tile2{
-                transform: rotate(-225deg) translate(-20px,14px);
+                transform: rotate(-225deg) translate(-4px,5px);
+                background-color: #212121;
             }
         }
         a{
             width: 100%;
-            font-size: 40px;
-            margin-bottom: 100px;
+            font-size: 15px;
+            font-weight: bold;
+            margin-bottom: 40px;
             display: block;
-            color: white;
+            color: #212121;
         }
     }
 }
