--- a/src/app/pages/HomePage/Client/styles.scss
+++ b/src/app/pages/HomePage/Client/styles.scss
@@ -10,7 +10,7 @@
     padding: 200px 20%;
     @include mobile{
         display: block;
-        padding: 200px 50px;
+        padding: 60px 50px 20px;
     }
     img{
         @include mobile{
@@ -24,7 +24,7 @@
         @include mobile{
             width: 100%;
             text-align: center;
-            padding: 50px;
+            padding: 20px;
         }
         h2{
             margin-bottom: 50px;
