--- a/src/app/pages/HomePage/Section1/styles.scss
+++ b/src/app/pages/HomePage/Section1/styles.scss
@@ -21,4 +21,9 @@
         //     font-size: 25px;
         // }
     }
+    h1{
+        @include mobile{
+            font-size: 25px;
+        }
+    }
 }
