--- a/src/app/pages/Inititative/Heading/styles.scss
+++ b/src/app/pages/Inititative/Heading/styles.scss
@@ -13,5 +13,8 @@
         text-transform: uppercase;
         margin: auto;
         width: 100%;
+        @include mobile{
+            font-size: 25px;
+        }
     }
 }
