--- a/src/app/assets/components/Carousel/styles.scss
+++ b/src/app/assets/components/Carousel/styles.scss
@@ -1,65 +1,103 @@
 @import '../../scss/global.scss';
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700");
+.carousel-container{
+	.mySlides {
+		display: none
+	}
+	img {
+		vertical-align: middle;
+	}
 
-div{
-	position: absolute;
-	height: 100px;
-	width: 492px;
-	margin: auto;
-	top:0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	padding: 4px;
-	border: 2px dotted #000;
-}
+		/* Slideshow container */
+	.slideshow-container {
+		max-width: 1000px;
+		position: relative;
+		margin: auto;
+	}
 
-box{
-	position:absolute;
-	height:100px;
-	width:100px;
-	left: 200px;
-	color: #ffffff;
-	font-weight: bold;
-	background: #FF2200;
-	transition: all 1s ease-out;
-	text-align: center;
-}
+		/* Next & previous buttons */
+	.prev, .next {
+		cursor: pointer;
+		position: absolute;
+		top: 50%;
+		width: auto;
+		padding: 16px;
+		margin-top: -22px;
+		color: white;
+		font-weight: bold;
+		font-size: 18px;
+		transition: 0.6s ease;
+		border-radius: 0 3px 3px 0;
+		user-select: none;
+	}
 
-.previous_box{
-	left: 0;
-	//AQUI
-	opacity: 0;
-}
+		/* Position the "next button" to the right */
+	.next {
+		right: 0;
+		border-radius: 3px 0 0 3px;
+	}
 
-.current_box{
-	left: 200px;
-	background:#5500FF;
-	//AQUI
-	opacity: 1;
-}
+		/* On hover, add a black background color with a little bit see-through */
+	.prev:hover, .next:hover {
+		background-color: rgba(0,0,0,0.8);
+	}
 
-.next_box{
-	left: 400px;
-	background:#00FF55;
-	//E AQUI
-	opacity: 0;
-}
+		/* Caption text */
+	.text {
+		color: #f2f2f2;
+		font-size: 15px;
+		padding: 8px 12px;
+		position: absolute;
+		bottom: 8px;
+		width: 100%;
+		text-align: center;
+	}
 
-button{
-	position: absolute;
-	height: 24px;
-	width: 132px;
-	top:0;
-	bottom:0;
-	margin: auto;
-}
+		/* Number text (1/3 etc) */
+	.numbertext {
+		color: #f2f2f2;
+		font-size: 12px;
+		padding: 8px 12px;
+		position: absolute;
+		top: 0;
+	}
 
-#go{
-	left:200px;	
-}
+		/* The dots/bullets/indicators */
+	.dot {
+		cursor: pointer;
+		height: 15px;
+		width: 15px;
+		margin: 0 2px;
+		background-color: #bbb;
+		border-radius: 50%;
+		display: inline-block;
+		transition: background-color 0.6s ease;
+	}
 
-#back{
-	right:200px;
+	.active, .dot:hover {
+		background-color: #717171;
+	}
+
+		/* Fading animation */
+	.fade {
+		-webkit-animation-name: fade;
+		-webkit-animation-duration: 1.5s;
+		animation-name: fade;
+		animation-duration: 1.5s;
+	}
+
+	@-webkit-keyframes fade {
+		from {opacity: .4} 
+		to {opacity: 1}
+	}
+
+	@keyframes fade {
+		from {opacity: .4} 
+		to {opacity: 1}
+	}
+
+		/* On smaller screens, decrease text size */
+	@media only screen and (max-width: 300px) {
+		.prev, .next,.text {font-size: 11px}
+	}
 }
