--- a/src/app/pages/HomePage/Management/styles.scss
+++ b/src/app/pages/HomePage/Management/styles.scss
@@ -24,7 +24,7 @@
             left: 0;
             -ms-transform: none;
             transform: none;
-            padding: 100px 0px;
+            padding:50px 0px 50px;
         }
         .button-container{
             display: flex;
