--- a/src/app/pages/HomePage/Overview/styles.scss
+++ b/src/app/pages/HomePage/Overview/styles.scss
@@ -104,10 +104,12 @@
         .prev{
             top: unset;
             bottom: -50px;
+            left: 0px;
         }
         .next{
             top: unset;
             bottom: -50px;
+            right: 0px;
         }
     }
 }
