--- a/src/app/assets/components/Carousel/styles.scss
+++ b/src/app/assets/components/Carousel/styles.scss
@@ -19,7 +19,7 @@
 	.prev, .next {
 		cursor: pointer;
 		position: absolute;
-		top: 50%;
+		// top: 50%;
 		width: auto;
 		padding: 16px;
 		margin-top: -22px;
@@ -33,7 +33,7 @@
 
 		/* Position the "next button" to the right */
 	.next {
-		right: 0;
+		// right: 0;
 		border-radius: 3px 0 0 3px;
 	}
 
