--- a/src/app/pages/Gallery/Heading/styles.scss
+++ b/src/app/pages/Gallery/Heading/styles.scss
@@ -14,4 +14,11 @@
         margin: auto;
         width: 100%;
     }
+    img{
+        width: 100%;
+        @include mobile{
+            height: 100%;display: none;
+            
+        }
+    }
 }
