--- a/src/app/pages/Inititative/Heading/styles.scss
+++ b/src/app/pages/Inititative/Heading/styles.scss
@@ -2,7 +2,7 @@
 
 .heading-container{
     width: 100vw;
-    height: 100vh;
+    // height: 50vh;
     position: relative;
     background-color: black;
     text-align: center;
@@ -15,6 +15,13 @@
         width: 100%;
         @include mobile{
             font-size: 25px;
+        }
+    }
+    img{
+        width: 100%;
+        @include mobile{
+            
+            height: 100%;display: none;
         }
     }
 }
