--- a/src/app/assets/scss/reset.scss
+++ b/src/app/assets/scss/reset.scss
@@ -875,6 +875,9 @@ h1{
     text-transform: uppercase;
     font-size: 60px;
     color: white;
+    @include mobile{
+        font-size: 40px;
+    }
 }
 h2{
     font-size: 60px;
@@ -885,6 +888,11 @@ h5{
     font-size: 25px;
     text-transform: uppercase;
     color: red;
+}
+p{
+    @include mobile{
+        font-size: 16px;
+    }
 }
 
 
