--- a/src/app/pages/Inititative/Heading/styles.scss
+++ b/src/app/pages/Inititative/Heading/styles.scss
@@ -13,9 +13,9 @@
         text-transform: uppercase;
         margin: auto;
         width: 100%;
-        @include mobile{
-            font-size: 25px;
-        }
+        // @include mobile{
+        //     font-size: 25px;
+        // }
     }
     img{
         width: 100%;
