--- a/src/app/pages/HomePage/Client/styles.scss
+++ b/src/app/pages/HomePage/Client/styles.scss
@@ -11,6 +11,7 @@
     @include mobile{
         display: block;
         padding: 60px 50px 20px;
+        background-color: #eaeaea;
     }
     img{
         @include mobile{
