--- a/src/app/pages/HomePage/Section1/styles.scss
+++ b/src/app/pages/HomePage/Section1/styles.scss
@@ -1,7 +1,11 @@
 @import '../../../assets/scss/global.scss';
 
 .section1-container{
-    background: url('../../../assets/images/section1-bg.jpg');
+    // background: url('../../../assets/images/section1-bg.jpg');
+    background: url('../../../assets/images/Gallery/gallery8.png');
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-size: 100vw 100vh;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -17,6 +21,7 @@
         letter-spacing: 0.7px;
         text-transform: uppercase;
         color: #ffffff;
+        text-shadow: 10px 10px 10px #000;
         // @include mobile{
         //     font-size: 25px;
         // }
