--- a/src/app/pages/Inititative/Heading/styles.scss
+++ b/src/app/pages/Inititative/Heading/styles.scss
@@ -18,10 +18,12 @@
         // }
     }
     img{
+        height: 100%;
         width: 100%;
         @include mobile{
-            
-            height: 100%;display: none;
+            height: 500px;
+            width: 100%;
+            visibility: hidden;
         }
     }
 }
