--- a/src/app/pages/Footer/styles.scss
+++ b/src/app/pages/Footer/styles.scss
@@ -80,6 +80,9 @@
                 background-color: black;
             }
         }
+        img{
+            height: 60px;
+        }
     }
     .right{
         // flex:1;
