--- a/src/app/pages/HomePage/Overview/styles.scss
+++ b/src/app/pages/HomePage/Overview/styles.scss
@@ -58,6 +58,12 @@
                     color: white;
                     text-align: center;
                     padding: 20%;
+                    p {
+                        font-size: 18px;
+                    }
+                    p {
+                        line-height: 20px;
+                    }
                 }
             }
         }
