--- a/src/app/pages/HomePage/Section1/styles.scss
+++ b/src/app/pages/HomePage/Section1/styles.scss
@@ -2,7 +2,7 @@
 
 .section1-container{
     // background: url('../../../assets/images/section1-bg.jpg');
-    background: url('../../../assets/images/Gallery/Gallery8.png');
+    background: url('../../../assets/images/bg1.png');
     background-repeat: no-repeat;
     background-size: auto;
     background-size: 100vw 100vh;
